--- a/index.html
+++ b/index.html
@@ -3,108 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sadhana Tracker | Official</title>
+    <title>Sadhana Tracker | Final Verified</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         :root { --primary: #2c3e50; --secondary: #3498db; --success: #27ae60; --danger: #e74c3c; --light: #f4f7f6; --white: #ffffff; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--light); margin: 0; padding: 0; }
-        .container { max-width: 900px; margin: 0 auto; padding: 15px; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--light); margin: 0; color: #333; }
+        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
         .hidden { display: none !important; }
-        .card { background: var(--white); padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); margin-bottom: 20px; }
-        input, select, button { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; font-size: 16px; }
-        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: 600; transition: 0.3s; }
-        button:disabled { background: #bdc3c7; }
-        .input-group { display: flex; gap: 8px; margin-bottom: 5px; }
-        .input-group input { flex: 1; margin: 0; }
-        label { font-weight: bold; font-size: 14px; color: var(--primary); display: block; margin-top: 10px; }
-        .nav-tabs { display: flex; gap: 8px; overflow-x: auto; padding-bottom: 10px; }
-        .tab-btn { width: auto; white-space: nowrap; background: #ecf0f1; color: #7f8c8d; padding: 8px 15px; border-radius: 20px; }
+        .card { background: var(--white); padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin-bottom: 20px; }
+        input, select, button { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; }
+        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: bold; }
+        .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #eee; padding-bottom: 15px; margin-bottom: 20px; }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; overflow-x: auto; }
+        .tab-btn { background: #ddd; padding: 10px 20px; border-radius: 20px; width: auto; white-space: nowrap; }
         .tab-btn.active { background: var(--secondary); color: white; }
+        .admin-table { width: 100%; border-collapse: collapse; background: white; font-size: 13px; margin-top: 10px; }
+        .admin-table th, .admin-table td { border: 1px solid #ddd; padding: 10px; text-align: center; }
+        .user-item { display: flex; justify-content: space-between; align-items: center; padding: 15px; border-bottom: 1px solid #eee; background: white; margin-bottom: 5px; border-radius: 8px; }
+        .user-actions { display: flex; gap: 5px; }
+        .user-actions button { width: auto; padding: 6px 12px; font-size: 12px; margin: 0; }
+        .week-card { background: #fff; border-left: 5px solid var(--secondary); margin-bottom: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        .week-header { padding: 15px; cursor: pointer; display: flex; justify-content: space-between; font-weight: bold; }
+        .week-content { padding: 15px; border-top: 1px solid #eee; }
+        .day-row { padding: 10px 0; border-bottom: 1px solid #f0f0f0; font-size: 14px; line-height: 1.6; }
+        .modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 1000; }
+        .modal-content { background: white; width: 95%; max-width: 850px; max-height: 90vh; padding: 25px; border-radius: 12px; overflow-y: auto; position: relative; }
+        .close-btn { position: absolute; top: 10px; right: 20px; font-size: 30px; cursor: pointer; }
+        .input-group { display: flex; gap: 10px; }
+        .input-group input { flex: 1; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <section id="auth-section" class="card">
-            <h2 style="text-align:center">Sadhana Tracker</h2>
-            <form id="login-form">
-                <input type="email" id="login-email" placeholder="Email" required>
-                <input type="password" id="login-password" placeholder="Password" required>
-                <button type="submit">Login</button>
-            </form>
-        </section>
 
-        <section id="profile-section" class="card hidden">
-            <h2>Complete Profile</h2>
-            <form id="profile-form">
-                <input type="text" id="profile-name" placeholder="Full Name" required>
-                <select id="profile-chanting" required>
-                    <option value="">Select Category</option>
-                    <option value="Level-1">Level-1 (0-4 Rounds)</option>
-                    <option value="Level-2">Level-2 (5-8 Rounds)</option>
-                    <option value="Level-3">Level-3 (9-16 Rounds)</option>
-                    <option value="Level-4">Level-4 (16+ Coordinator)</option>
-                </select>
-                <input type="number" id="profile-exact-rounds" placeholder="Current Rounds" required>
-                <button type="submit">Save & Continue</button>
-            </form>
-        </section>
+<div class="container">
+    <section id="auth-section" class="card">
+        <h2 style="text-align: center;">Sadhana Tracker</h2>
+        <form id="login-form">
+            <input type="email" id="login-email" placeholder="Email" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+    </section>
 
-        <section id="dashboard-section" class="hidden">
-            <div class="card" style="display:flex; justify-content:space-between; align-items:center">
-                <span id="user-display-name" style="font-weight:bold"></span>
-                <button id="logout-btn" style="width:auto; padding:5px 15px; background:var(--danger)">Logout</button>
+    <section id="profile-section" class="card hidden">
+        <h2 id="profile-title">Complete Profile</h2>
+        <form id="profile-form">
+            <input type="text" id="profile-name" placeholder="Full Name" required>
+            <select id="profile-chanting" required>
+                <option value="">Select Level</option>
+                <option value="Level-1">Level-1 (0-4 Rounds)</option>
+                <option value="Level-2">Level-2 (5-8 Rounds)</option>
+                <option value="Level-3">Level-3 (9-16 Rounds)</option>
+                <option value="Level-4">Level-4 (16+ Coordinator)</option>
+            </select>
+            <input type="number" id="profile-exact-rounds" placeholder="Exact Rounds" required min="0">
+            <button type="submit" id="profile-save-btn">Save Profile</button>
+            <button type="button" onclick="showSection('dashboard')" id="cancel-edit" class="hidden" style="background:#95a5a6;">Cancel</button>
+        </form>
+    </section>
+
+    <section id="dashboard-section" class="hidden">
+        <div class="header">
+            <div>
+                <h3 id="user-display-name" style="margin:0;"></h3>
+                <button onclick="openProfileEdit()" style="width:auto; padding:5px 10px; font-size:12px; background:#9b59b6;">Edit Profile</button>
             </div>
+            <button id="logout-btn" style="width: auto; background: #95a5a6; padding: 5px 15px;">Logout</button>
+        </div>
 
-            <div class="nav-tabs">
-                <button class="tab-btn active" onclick="switchTab('sadhana')">Daily Entry</button>
-                <button class="tab-btn" onclick="switchTab('reports')">My History</button>
-                <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin Panel</button>
-            </div>
+        <div class="nav-tabs">
+            <button class="tab-btn active" onclick="switchTab('sadhana')">Entry</button>
+            <button class="tab-btn" onclick="switchTab('reports')">My Reports</button>
+            <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin</button>
+        </div>
 
-            <div id="sadhana-tab" class="tab-content card">
+        <div id="sadhana-tab" class="tab-content">
+            <div class="card">
+                <h3>Submit Daily Sadhana</h3>
                 <form id="sadhana-form">
-                    <label>Date</label><select id="sadhana-date" required></select>
-                    <label>Bed Time (Yesterday)</label><input type="time" id="sleep-time" required>
-                    <label>Wake Up Time</label><input type="time" id="wakeup-time" required>
-                    <label>Chanting (Last round by)</label><input type="time" id="chanting-time" required>
+                    <label>Date:</label><select id="sadhana-date" required></select>
+                    <label>Bed Time (Yesterday):</label><input type="time" id="sleep-time" required>
+                    <label>Wake Up Time:</label><input type="time" id="wakeup-time" required>
+                    <label>Chanting (Last round by):</label><input type="time" id="chanting-time" required>
 
-                    <label>Reading (Pathan)</label>
+                    <label>Reading (Pathan):</label>
                     <div class="input-group">
-                        <input type="number" id="reading-hrs" placeholder="Hrs">
-                        <input type="number" id="reading-mins" placeholder="Mins">
+                        <input type="number" id="reading-hrs" placeholder="Hrs" required min="0">
+                        <input type="number" id="reading-mins" placeholder="Mins" required min="0" max="59">
                     </div>
 
-                    <label>Hearing (Shravan)</label>
+                    <label>Hearing (Shravan):</label>
                     <div class="input-group">
-                        <input type="number" id="hearing-hrs" placeholder="Hrs">
-                        <input type="number" id="hearing-mins" placeholder="Mins">
+                        <input type="number" id="hearing-hrs" placeholder="Hrs" required min="0">
+                        <input type="number" id="hearing-mins" placeholder="Mins" required min="0" max="59">
                     </div>
 
                     <div id="service-area" class="hidden">
-                        <label>Service (Seva)</label>
+                        <label>Service (Seva):</label>
                         <div class="input-group">
-                            <input type="number" id="service-hrs" placeholder="Hrs">
-                            <input type="number" id="service-mins" placeholder="Mins">
+                            <input type="number" id="service-hrs" placeholder="Hrs" required min="0">
+                            <input type="number" id="service-mins" placeholder="Mins" required min="0" max="59">
                         </div>
                     </div>
 
-                    <label>Day Sleep (Mins)</label><input type="number" id="day-sleep-minutes" value="0">
-                    <button type="submit" id="submit-btn">Submit Sadhana</button>
-                </form>
-            </div>
+                    <label>Day Sleep (Mins):</label>
+                    <input type="number" id="day-sleep-minutes" value="0" required min="0">
 
-            <div id="reports-tab" class="tab-content hidden card">
-                <div id="weekly-reports-container"></div>
+                    <button type="submit" id="submit-btn">Submit Entry</button>
+                </form>   
             </div>
+        </div>
 
-            <div id="admin-tab" class="tab-content hidden card">
-                <div id="admin-users-list"></div>
+        <div id="reports-tab" class="tab-content hidden">
+            <button id="user-download-btn" style="background: var(--success); margin-bottom:15px;">Download History (Excel)</button>
+            <div id="weekly-reports-container"></div>
+        </div>
+
+        <div id="admin-tab" class="tab-content hidden">
+            <div style="display:flex; gap:10px;">
+                <button onclick="downloadMasterReport()" style="background:var(--success)">Master Detailed Report</button>
+                <button onclick="downloadComparativeSummary()" style="background:#e67e22">Weekly Summary Excel</button>
             </div>
-        </section>
+            <div class="card" style="overflow-x:auto;">
+                <h3>4-Week Comparison</h3>
+                <div id="admin-comparative-reports-container"></div>
+            </div>
+            <div class="card"><h3>User Management</h3><div id="admin-users-list"></div></div>
+        </div>
+    </section>
+</div>
+
+<div id="user-report-modal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-btn" onclick="closeUserModal()">&times;</span>
+        <h2 id="modal-user-name"></h2><hr>
+        <div id="modal-report-container"></div>
     </div>
-    <script src="app.js"></script>
+</div>
+
+<script src="app.js"></script>
 </body>
 </html>
