--- a/index.html
+++ b/index.html
@@ -10,152 +10,142 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         :root { --primary: #2c3e50; --secondary: #3498db; --success: #27ae60; --danger: #e74c3c; --light: #f4f7f6; --white: #ffffff; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: var(--light); margin: 0; color: #333; }
-        .container { max-width: 1100px; margin: 0 auto; padding: 20px; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--light); margin: 0; padding: 0; }
+        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
         .hidden { display: none !important; }
         .card { background: var(--white); padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        input, select, button { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; font-size: 14px; }
-        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: bold; transition: 0.3s; }
-        button:hover { opacity: 0.9; }
-        .header { display: flex; justify-content: space-between; align-items: center; background: white; padding: 15px 20px; border-radius: 10px; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; overflow-x: auto; padding-bottom: 5px; }
-        .tab-btn { background: #e0e0e0; padding: 10px 20px; border-radius: 25px; width: auto; white-space: nowrap; }
+        input, select, button { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
+        button { background: var(--secondary); color: white; border: none; cursor: pointer; font-weight: 600; }
+        .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; padding: 10px; background: white; border-radius: 8px; }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; }
+        .tab-btn { background: #eee; padding: 10px 20px; border-radius: 20px; width: auto; }
         .tab-btn.active { background: var(--secondary); color: white; }
         .input-group { display: flex; gap: 10px; }
         .input-group input { flex: 1; }
-        
-        /* Table & Accordion Styles */
-        .report-table { width: 100%; border-collapse: collapse; background: white; font-size: 13px; margin-top: 10px; }
-        .report-table th, .report-table td { border: 1px solid #eee; padding: 10px; text-align: center; }
-        .report-table th { background: #f8f9fa; color: var(--primary); }
-        .week-box { border: 1px solid #ddd; border-radius: 8px; margin-bottom: 12px; background: white; overflow: hidden; }
-        .week-header { padding: 15px; background: #fff; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; border-left: 6px solid var(--secondary); }
-        .week-content { padding: 10px; border-top: 1px solid #eee; display: none; overflow-x: auto; }
-        .week-content.active { display: block; }
-        
-        /* Modal Styles */
+        .admin-table { width: 100%; border-collapse: collapse; margin-top: 15px; background: white; }
+        .admin-table th, .admin-table td { border: 1px solid #ddd; padding: 12px; text-align: center; }
+        .week-card { background: white; margin-bottom: 10px; border-radius: 8px; border-left: 5px solid var(--secondary); }
+        .week-header { padding: 15px; cursor: pointer; display: flex; justify-content: space-between; font-weight: bold; }
+        .week-content { padding: 15px; border-top: 1px solid #eee; }
         .modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; justify-content: center; align-items: center; z-index: 1000; }
-        .modal-content { background: white; width: 95%; max-width: 1000px; padding: 25px; border-radius: 12px; max-height: 85vh; overflow-y: auto; position: relative; }
-        .close-btn { position: absolute; top: 15px; right: 20px; font-size: 28px; cursor: pointer; color: #666; }
+        .modal-content { background: white; width: 90%; max-width: 800px; padding: 25px; border-radius: 12px; max-height: 85vh; overflow-y: auto; position: relative; }
     </style>
 </head>
 <body>
+    <div class="container">
+        <section id="auth-section" class="card">
+            <h2 style="text-align:center">Sadhana Tracker</h2>
+            <form id="login-form">
+                <input type="email" id="login-email" placeholder="Email" required>
+                <input type="password" id="login-password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+        </section>
 
-<div class="container">
-    <section id="auth-section" class="card">
-        <h2 style="text-align: center;">Sadhana Tracker Login</h2>
-        <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email Address" required>
-            <input type="password" id="login-password" placeholder="Password" required>
-            <button type="submit">Sign In</button>
-        </form>
-    </section>
+        <section id="profile-section" class="card hidden">
+            <h2 id="profile-title">Complete Your Profile</h2>
+            <form id="profile-form">
+                <input type="text" id="profile-name" placeholder="Full Name" required>
+                <select id="profile-chanting" required>
+                    <option value="">Select Category</option>
+                    <option value="Level-1">Level-1 (0-4 Rounds)</option>
+                    <option value="Level-2">Level-2 (5-8 Rounds)</option>
+                    <option value="Level-3">Level-3 (9-16 Rounds)</option>
+                    <option value="Level-4">Level-4 (16+ Rounds Coordinator)</option>
+                </select>
+                <input type="number" id="profile-exact-rounds" placeholder="Current Exact Rounds" required>
+                <button type="submit">Save Profile</button>
+                <button type="button" onclick="showSection('dashboard')" id="cancel-edit" class="hidden" style="background:#95a5a6">Cancel</button>
+            </form>
+        </section>
 
-    <section id="profile-section" class="card hidden">
-        <h2>Set Up Your Profile</h2>
-        <form id="profile-form">
-            <input type="text" id="profile-name" placeholder="Enter Full Name" required>
-            <select id="profile-chanting" required>
-                <option value="">Select Level Category</option>
-                <option value="Level-1">Level-1 (0-4 Rounds)</option>
-                <option value="Level-2">Level-2 (5-8 Rounds)</option>
-                <option value="Level-3">Level-3 (9-16 Rounds)</option>
-                <option value="Level-4">Level-4 (16+ Rounds Coordinator)</option>
-            </select>
-            <input type="number" id="profile-exact-rounds" placeholder="Enter Exact Number of Rounds" required min="0">
-            <button type="submit">Complete Registration</button>
-        </form>
-    </section>
-
-    <section id="dashboard-section" class="hidden">
-        <div class="header">
-            <div>
-                <span id="user-display-name" style="font-weight:bold; font-size:1.1em;"></span>
-                <br><small id="user-display-level"></small>
+        <section id="dashboard-section" class="hidden">
+            <div class="header">
+                <div>
+                    <strong id="user-display-name"></strong>
+                    <br><button onclick="openProfileEdit()" style="width:auto; padding:2px 10px; font-size:11px; margin:0">Edit Profile</button>
+                </div>
+                <button id="logout-btn" style="width:auto; padding:5px 15px; background:var(--danger)">Logout</button>
             </div>
-            <button id="logout-btn" style="width:auto; padding:8px 18px; background:var(--danger)">Logout</button>
-        </div>
 
-        <div class="nav-tabs">
-            <button class="tab-btn active" onclick="switchTab('sadhana')">Daily Form</button>
-            <button class="tab-btn" onclick="switchTab('reports')">My History</button>
-            <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin Panel</button>
-        </div>
+            <div class="nav-tabs">
+                <button class="tab-btn active" onclick="switchTab('sadhana')">Daily Entry</button>
+                <button class="tab-btn" onclick="switchTab('reports')">My Reports</button>
+                <button class="tab-btn hidden" id="admin-tab-btn" onclick="switchTab('admin')">Admin Panel</button>
+            </div>
 
-        <div id="sadhana-tab" class="tab-content">
-            <div class="card">
-                <h3>Submit Daily Sadhana</h3>
-                <form id="sadhana-form">
-                    <label>Select Date:</label>
-                    <select id="sadhana-date" required></select>
+            <div id="sadhana-tab" class="tab-content">
+                <div class="card">
+                    <form id="sadhana-form">
+                        <label>Date (YYYY-MM-DD):</label>
+                        <select id="sadhana-date" required></select>
 
-                    <label>Bed Time (Last Night):</label>
-                    <input type="time" id="sleep-time" required>
+                        <label>Bed Time (Yesterday):</label>
+                        <input type="time" id="sleep-time" required>
 
-                    <label>Wake Up Time:</label>
-                    <input type="time" id="wakeup-time" required>
+                        <label>Wake Up Time:</label>
+                        <input type="time" id="wakeup-time" required>
 
-                    <label>Chanting (Last round completed by):</label>
-                    <input type="time" id="chanting-time" required>
+                        <label>Chanting (Last round by):</label>
+                        <input type="time" id="chanting-time" required>
 
-                    <label>Reading (Pathan):</label>
-                    <div class="input-group">
-                        <input type="number" id="reading-hrs" placeholder="Hrs" required min="0">
-                        <input type="number" id="reading-mins" placeholder="Mins" required min="0" max="59">
-                    </div>
-
-                    <label>Hearing (Shravan):</label>
-                    <div class="input-group">
-                        <input type="number" id="hearing-hrs" placeholder="Hrs" required min="0">
-                        <input type="number" id="hearing-mins" placeholder="Mins" required min="0" max="59">
-                    </div>
-
-                    <div id="service-area" class="hidden">
-                        <label>Service (Seva):</label>
+                        <label>Reading (Pathan) - Hrs & Mins:</label>
                         <div class="input-group">
-                            <input type="number" id="service-hrs" placeholder="Hrs" min="0">
-                            <input type="number" id="service-mins" placeholder="Mins" min="0" max="59">
+                            <input type="number" id="reading-hrs" placeholder="Hrs" required min="0">
+                            <input type="number" id="reading-mins" placeholder="Mins" required min="0" max="59">
                         </div>
-                    </div>
 
-                    <label>Day Sleep (Total Minutes):</label>
-                    <input type="number" id="day-sleep-minutes" value="0" required min="0">
+                        <label>Hearing (Shravan) - Hrs & Mins:</label>
+                        <div class="input-group">
+                            <input type="number" id="hearing-hrs" placeholder="Hrs" required min="0">
+                            <input type="number" id="hearing-mins" placeholder="Mins" required min="0" max="59">
+                        </div>
 
-                    <button type="submit" id="submit-btn" style="background:var(--success); margin-top:20px;">Submit Daily Entry</button>
-                </form>
+                        <div id="service-area" class="hidden">
+                            <label>Service (Seva) - Hrs & Mins:</label>
+                            <div class="input-group">
+                                <input type="number" id="service-hrs" placeholder="Hrs" min="0">
+                                <input type="number" id="service-mins" placeholder="Mins" min="0" max="59">
+                            </div>
+                        </div>
+
+                        <label>Day Sleep (Mins):</label>
+                        <input type="number" id="day-sleep-minutes" value="0" required>
+
+                        <button type="submit" id="submit-btn">Submit Sadhana</button>
+                    </form>
+                </div>
             </div>
-        </div>
 
-        <div id="reports-tab" class="tab-content hidden">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
-                <h3>Last 4 Weeks Activity</h3>
-                <button id="user-download-btn" style="width:auto; background:var(--success); font-size:13px;">Download Full History (Excel)</button>
+            <div id="reports-tab" class="tab-content hidden">
+                <button id="user-download-btn" style="background:var(--success); margin-bottom:15px">Download My History (Excel)</button>
+                <div id="weekly-reports-container"></div>
             </div>
-            <div id="weekly-accordion-container"></div>
-        </div>
 
-        <div id="admin-tab" class="tab-content hidden">
-            <div class="card">
-                <button onclick="downloadMasterReport()" style="background:var(--success); margin-bottom:15px;">Download All Users Master Excel</button>
-                <h3>Comparative Analysis (4 Weeks)</h3>
-                <div id="admin-comparative-container" style="overflow-x:auto"></div>
+            <div id="admin-tab" class="tab-content hidden">
+                <div style="display:flex; gap:10px; margin-bottom:15px">
+                    <button onclick="downloadMasterReport()" style="background:var(--success)">Download Master Excel</button>
+                </div>
+                <div class="card" style="overflow-x:auto">
+                    <h3>4-Week Weekly Scores</h3>
+                    <div id="admin-comparative-reports-container"></div>
+                </div>
+                <div class="card">
+                    <h3>All Users</h3>
+                    <div id="admin-users-list"></div>
+                </div>
             </div>
-            <div class="card">
-                <h3>User Management</h3>
-                <div id="admin-users-list"></div>
-            </div>
-        </div>
-    </section>
-</div>
-
-<div id="user-report-modal" class="modal hidden">
-    <div class="modal-content">
-        <span class="close-btn" onclick="closeUserModal()">&times;</span>
-        <h2 id="modal-user-name"></h2><hr>
-        <div id="modal-report-container"></div>
+        </section>
     </div>
-</div>
 
-<script src="app.js"></script>
+    <div id="user-report-modal" class="modal hidden">
+        <div class="modal-content">
+            <span onclick="closeUserModal()" style="position:absolute; right:20px; cursor:pointer; font-size:24px">&times;</span>
+            <h2 id="modal-user-name"></h2>
+            <div id="modal-report-container"></div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
